--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                          <username>saikumarkapu</username>
                          <password>Saikumar1595</password>
                          <muleVersion>${app.runtime}</muleVersion>
-                         <applicationName>indigo-cloudhub</applicationName>
+                         <applicationName>indigoapi-cloudhub</applicationName>
                          <environment>DEV</environment>
                          <region>${region}</region>
                          <workers>1</workers>
